fix: missing border when loading nitro page

--- a/src/theme/content/_header.scss
+++ b/src/theme/content/_header.scss
@@ -25,7 +25,9 @@
     // EmptyChannel
     .noChannel__01d5c,
     // DevTools
-    .container_db0ccb {
+    .container_db0ccb,
+    // ApplicationStore
+    .applicationStore_f07d62 {
         .container__9293f {
             border-left: unset;
         }
